--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,9 +10,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  wifi_iot: ^0.3.23  # For hotspot control (Android)
   shared_preferences: ^2.2.2  # Local storage
-  http: ^1.1.0  # For NextDNS API calls
+  http: ^1.1.0  # NextDNS API
+  url_launcher: ^6.2.2  # For opening Settings (iOS/Android)
+  # iOS VPN/DNS: Use a package like 'flutter_vpn' or implement via channels
+  # For now, simulate with url_launcher for Settings
 
 dev_dependencies:
   flutter_test:
